--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,10 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  database: grimoire
+  username: grimoire
+  password: <%= ENV.fetch("MYSQL_PASS") {""} %>
+  host: mysql
+  pool: 5
